--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "appwrite": "^21.5.0",
     "framer-motion": "^12.23.24",
     "lucide": "^0.554.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "^19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
-    "sass": "^1.94.2"
+    "react-hook-form": "^7.68.0",
+    "recharts": "^3.5.1",
+    "sass": "^1.94.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
